fix close button alignment on add calendar panel

--- a/www/assets/styles/resource-panel.css
+++ b/www/assets/styles/resource-panel.css
@@ -590,7 +590,7 @@
 }
 .pane-header.small span.right {
 	position: absolute;
-	right: -5px;
+	right: 0px;
 	top: 0px;
 }
 
